--- a/index.html
+++ b/index.html
@@ -72,23 +72,28 @@
                         </div>
                     </div>
                     <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-                        <button id="clientes-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-blue-500 text-blue-600 dark:text-blue-400 dark:border-blue-400">
+                        <button id="clientes-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-blue-500 text-blue-600 dark:text-blue-400 dark:border-blue-400 flex items-center gap-1.5">
+                          <i data-lucide="users" class="w-4 h-4"></i>
                           Clientes
                         </button>
-                        <button id="registros-diarios-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600">
+                        <button id="registros-diarios-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 flex items-center gap-1.5">
+                          <i data-lucide="clipboard-list" class="w-4 h-4"></i>
                           Registros Diários
                         </button>
-                        <button id="usuarios-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 hidden">
+                        <button id="usuarios-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 hidden flex items-center gap-1.5">
+                          <i data-lucide="user-cog" class="w-4 h-4"></i>
                           Usuários
                         </button>
-                        <button id="dados-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600">
+                        <button id="dados-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 flex items-center gap-1.5">
+                          <i data-lucide="database" class="w-4 h-4"></i>
                           Dados
                         </button>
-                        <button id="configuracao-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600">
+                        <button id="configuracao-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 flex items-center gap-1.5">
+                          <i data-lucide="settings" class="w-4 h-4"></i>
                           Configuração
                         </button>
-                        <button id="jogos-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600">
-                          <i data-lucide="gamepad-2" class="w-4 h-4 inline mr-1"></i>
+                        <button id="jogos-tab" class="whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm border-transparent text-slate-500 hover:text-slate-700 hover:border-slate-300 dark:text-slate-400 dark:hover:text-slate-300 dark:hover:border-slate-600 flex items-center gap-1.5">
+                          <i data-lucide="gamepad-2" class="w-4 h-4"></i>
                           Jogos
                         </button>
                     </nav>
