--- a/index.html
+++ b/index.html
@@ -656,6 +656,7 @@
                                 </div>
                                 <div class="mt-4 text-center text-sm text-slate-500 dark:text-slate-400">
                                     <p>Use as setas do teclado ou WASD para controlar</p>
+                                    <p class="text-xs mt-1">Doom: Mouse = mirar, WASD = mover, Clique = atirar</p>
                                 </div>
                             </div>
                         </div>
